add getApplicationProgramsUpdateStatus
